--- a/styles.css
+++ b/styles.css
@@ -3,44 +3,47 @@ body {
 	background-color: rgb(61, 59, 52);
 	color: rgb(189, 228, 228);
 	background-image: url('gradient.png');
-	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
-	
+	padding: 10px;
 
 }
 td, th {
 	border-radius: 10px;
-	padding: 5px 5px;
+	padding: 0px 5px;
 	border: 1px solid white;
-	border-collapse: collapse;
 	background-color: rgb(112, 100, 100);
 }
 dl {
 	background-color: rgb(107, 94, 94);
 	padding: 15px 15px;
-	border: 2px inset rgb(70, 22, 88);
+	border: 2px solid rgb(70, 22, 88);
 	border-radius: 20px;
-	width: 280px;
+	width: 40%;
+}
+
+dd {
+	padding-left: 20px;
 }
 dd:nth-child(even){
 	background-color: dimgray;
 	border-radius: 10px;
-	width: 60%;
+	width: 40%;
 }
 dd:nth-child(odd){
 	background-color: gray;
 	border-radius: 10px;
-	width: 60%;
+	width: 40%;
 }
 dd:hover {
 	background-color: black;
 }
+
 dt {
 	background-color: rgb(82, 62, 82);
 	padding: 5px;
 	border-radius: 10px;
-	width: 70%
+	width: 40%
 }
 a:link {
 	background-color: clear;
@@ -58,7 +61,7 @@ a:visited, a:hover, a:active {
 
 p, div {
 	border-radius: 10px;
-	border: 2px inset rgb(70, 22, 88);;
+	border: 2px solid rgb(70, 22, 88);
 	padding: 8px;
 	background-color: rgb(77, 74, 67);
 	font-family: segoe ui;
@@ -71,8 +74,7 @@ p, div {
 .center {
 	display: block;
 	margin-left: auto;
-	margin-right: auto;	
-	width: 50%;
+	margin-right: auto;
 }
 
 
