--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,26 +1,17 @@
+
+
 body {
 	font-family: calibri;
-	background-color: rgb(61, 59, 52);
-	color: rgb(243, 224, 224);
-	background-attachment: fixed;
-	background-color: rgb(248, 223, 223);
-	background-size: cover;
+	color: black;
+	background-color: bisque;
 	padding: 10px;
-	animation-name: move_left;
-  	animation-duration: 4s;
 
-}
+} 
 td, th {
-	border-radius: 10px;
 	padding: 0px 5px;
-	border: 1px solid white;
-	background-color: rgb(112, 100, 100);
 }
 dl {
-	background-color: rgb(107, 94, 94);
 	padding: 15px 15px;
-	border: 2px solid rgb(70, 22, 88);
-	border-radius: 20px;
 	width: 40%;
 }
 
@@ -28,37 +19,37 @@ dd {
 	padding-left: 20px;
 }
 dd:nth-child(even){
-	background-color: dimgray;
 	border-radius: 10px;
 	width: 40%;
 }
 dd:nth-child(odd){
-	background-color: gray;
 	border-radius: 10px;
 	width: 40%;
 }
 dd:hover {
-	background-color: black;
 }
 
 dt {
-	background-color: rgb(82, 62, 82);
 	padding: 5px;
 	border-radius: 10px;
 	width: 40%
 }
 a:link {
-	background-color: clear;
-	color:white;
+	color:blue;
 	padding: 5px 8px;
 	text-align: center;
-	text-decoration: none;
 	display: inline-block;
 }
 
-a:visited, a:hover, a:active {
-	background-color: red;
+a:hover {
+	color: black;
 }
+
+
+a:visited, a:active {
+	color: red;
+}
+
 
 @keyframes move_left{
 	from{
@@ -68,12 +59,11 @@ a:visited, a:hover, a:active {
 		float:right;
 	}
 }
-p, div {
+
+.box {
 	border-radius: 10px;
 	border: 2px solid rgb(70, 22, 88);
 	padding: 8px;
-	background-color: rgb(77, 74, 67);
-	font-family: segoe ui;
 }
 
 .clicker:hover {
@@ -90,16 +80,54 @@ p, div {
 
 
 h1 {
-	color: rgb(255, 255, 255);
-	background-color: rgb(214, 44, 44);
 	padding: 15px;
+	text-align: center;
 }
 
 h3 {
-	color: rgb(230, 203, 203);
 	padding: 10px;
 }
 
 img {
 	padding: 5px 5px;
 }
+
+/* Dropdown Button */
+.dropbtn {
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+	position: relative;
+	display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #e9d79c;}
