--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,65 +5,28 @@ body {
 	color: black;
 	background-color: bisque;
 	padding: 10px;
-
+	text-align: center;
 } 
-td, th {
-	padding: 0px 5px;
-}
-dl {
-	padding: 15px 15px;
-	width: 40%;
-}
 
-dd {
-	padding-left: 20px;
-}
-dd:nth-child(even){
-	border-radius: 10px;
-	width: 40%;
-}
-dd:nth-child(odd){
-	border-radius: 10px;
-	width: 40%;
-}
-dd:hover {
-}
 
-dt {
-	padding: 5px;
-	border-radius: 10px;
-	width: 40%
-}
 a:link {
 	color:blue;
 	padding: 5px 8px;
-	text-align: center;
 	display: inline-block;
 }
-
 a:hover {
 	color: black;
 }
-
-
-a:visited, a:active {
+a:active {
 	color: red;
 }
 
-
-@keyframes move_left{
-	from{
-		float:left;
-	}
-	to{
-		float:right;
-	}
-}
 
 .box {
 	border-radius: 10px;
 	border: 2px solid rgb(70, 22, 88);
 	padding: 8px;
+	text-align: left;
 }
 
 .clicker:hover {
@@ -78,19 +41,41 @@ a:visited, a:active {
 	width: 50%;
 }
 
+.titleCard {
+	font-size: large;
+	width: 70%;
+}
+
+.photoFrame {
+	float: left;
+	width: 300px;
+	height: 300px;
+}
+
 
 h1 {
 	padding: 15px;
 	text-align: center;
 }
 
+h2 {
+	padding: 10px;
+}
+
 h3 {
 	padding: 10px;
+}
+
+p{
+	font-weight: bold;
 }
 
 img {
 	padding: 5px 5px;
 }
+
+
+
 
 /* Dropdown Button */
 .dropbtn {
